# CodeMasterBot

./: .dockerignore  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
backend/: .coveragerc  Dockerfile  conftest.py  pytest.ini  requirements.dev.txt  requirements.txt
backend/backend/: settings.py  test_settings.py
backend/bot/: admin.py  init.py  models.py
backend/bot/handlers/: commands.py  context_helpers.py  db_helpers.py  handlers.py  keyboards.py  messages.py  notifications.py  quiz_answer_handlers.py  quiz_helpers.py  quiz_mode_handlers.py  static_data.py  utils.py
backend/bot/management/commands/: populate_questions.py  populate_questions_prod.py  start_bot.py
backend/bot/managers/: user_manager.py
backend/bot/migrations/: 0001_initial.py  0002_argument_rename_name_tag_name_tag_question_arguments.py  0003_remove_question_arguments_question_syntax_and_more.py  0004_rename_name_tag_tag_name.py  0005_usersettings_usersettings_unique_user_tag.py  0006_alter_usersettings_notification_time.py  0007_alter_usersettings_difficulty_alter_usersettings_tag.py  0008_alter_usersettings_difficulty.py
backend/tests/integration/test_bot_flows/: test_bot_integration.py
backend/tests/unit/: test_django_server.py  test_models.py
backend/tests/unit/test_handlers/: test_commands.py  test_handlers.py
config/: settings.toml
config/environments/: local.toml  production.toml  test.toml
config/schemas/: __init__.py  database.py  security.py  telegram.py
data/: questions.csv
docs/: Project.md  erDiagram.mmd  models_er_diagram.md
nginx/: default.conf
ruff_config/dev/: pyproject.toml
ruff_config/prod/: pyproject.toml
